//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  userName String [not null]
  firstName String [not null]
  dateNaissance DateTime [not null]
  email String [unique, not null]
  password String [not null]
  pseudo String [unique, not null]
  profilPic String
  expertise expertiseType [not null]
  dateInscription DateTime [default: `now()`, not null]
  bio String [not null]
  status Boolean [not null, default: true]
  badgeId Int [not null]
  badge Badge [not null]
  groups UsersGroup [not null]
}

Table Badge {
  id Int [pk, increment]
  name BadgeType [not null]
  niveau Int [not null]
  icon String [not null]
  badge User [not null]
}

Table Group {
  id Int [pk, increment]
  name String [not null]
  type GroupeType [not null]
  nbMembres Int [not null, default: 0]
  maxMembres Int
  dateCreation DateTime [default: `now()`, not null]
  adminId Int [not null]
  membres UsersGroup [not null]
}

Table UsersGroup {
  id Int [pk, increment]
  membreId Int [not null]
  groupId Int [not null]
  dateAdhesion DateTime [default: `now()`, not null]
  membre User [not null]
  groupe Group [not null]
}

Enum BadgeType {
  Influenceur
  Professionnel
  Fidèle
  Modérateur
  Community_Helper
}

Enum expertiseType {
  Débutant
  Intermédiaire
  Expert
  Collectionneur
}

Enum GroupeType {
  Prive
  Public
}

Ref: User.badgeId > Badge.id

Ref: UsersGroup.membreId > User.id

Ref: UsersGroup.groupId > Group.id